fix bugs on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@
 
 html {
   scroll-behavior: smooth;
-  background: rgb(0, 162, 115);
+  background: rgb(0, 18, 78);
   min-height: 100%;
   overscroll-behavior: none;
 }
