--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -83,6 +83,7 @@ body {
   background: rgb(0, 18, 78);  /* fallback for old browsers */
   background-image: linear-gradient(135deg, rgb(0, 18, 78) 0%, rgb(0, 44, 80) 16.667%, rgb(0, 70, 113) 33.333%, rgb(0, 96, 100) 50%, rgb(0, 119, 72) 66.667%, rgb(0, 142, 94) 83.333%, rgb(0, 162, 115) 100%);
   background-attachment: scroll;
+  min-height: 100%;
   color: var(--color-text);
   letter-spacing: 0.05em;
   transition: color var(--transition-medium), background var(--transition-medium);
